Updated editor to display workflow description when no node is selected.

--- a/Bonsai.Editor/Properties/Resources.resx
+++ b/Bonsai.Editor/Properties/Resources.resx
@@ -250,4 +250,7 @@ Do you want to install Visual Studio Code?</value>
   <data name="CreateExtensionsWorkflow_Warning_Caption" xml:space="preserve">
     <value>Save Workflow</value>
   </data>
+  <data name="WorkflowPropertiesDescription" xml:space="preserve">
+    <value>Externalized properties of this workflow can be configured below.</value>
+  </data>
 </root>
