Added start screen open menu icons.

--- a/Bonsai.Editor/StartScreen.resx
+++ b/Bonsai.Editor/StartScreen.resx
@@ -117,6 +117,63 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="iconList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>184, 17</value>
+  </metadata>
+  <data name="iconList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
+        CgAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AFgAB/w70
+        EgAM9AcACvQCAAH0AQcMFAH0EgAB9AoUAfQHAAH0CBQB9AIAAfQB7AoUAfcBFAH0EgAB9AoUAfQHAAH0
+        ARQG9AEUAfQCAAH0AeoKFAHxARQB9AEAAf8B8AHrARMCIQEAAQ4BEQEVAf8GAAH0AhQC9AIUAvQCFAH0
+        BwAB9AEUBvQBFAH0AQAB/wHwChQB6gH0ARQB9AEABP8B8AETAesE/wEAAv8DAAH0AhQC9AIUAvQCFAH0
+        BQAB9AH/AfQBFAb0ARQB9AEAAfQB9woUAewB9AEUAfQBAAH/Ae8BcgH3ARwB6gHxBP8BAAL/AwAB9AoU
+        AfQEAAT0ARQG9AEUAfQBAAH0AW0KFAEHAfQBFAH0AQAB/wFJAScBIQESAW0BkgFyAe0B8wH/AQAC/wMA
+        AfQKFAH0AwAC9AFSAZkB9AEUBvQBFAH0AQAB9AEUAW0BBwHyAfQGFAL0ARQB9AEAAf8B9AFJAgIEJwES
+        Af8BAAL/AwAB9AIUAvQCFAL0AhQB9AMAAf8B9AGZAVIB9AEUBPQCFAHsAfQBAAL0AbsCign0ARQB9AEA
+        Af8B9AFzAUkCLQICAScBSQH/AQAC/wMAAfQCFAL0AhQC9AIUAfQDAAX0ARQE9AEUAewB9AH/AgAB9AGK
+        AbQB8gn0ARQB9AEAAf8B9wMtAQIB7QH3AbwC/wEAAv8DAAH0ChQB9AMAAfQCTAL0BRQB7AH0Af8CAAL0
+        AYoB8gHzAYsBigG0BvQBFAH0AQAC/wGYAU8BAgFyBf8BAAL/AwAB9AoUAfQDAAv0Af8EAAH0AYoBtAHy
+        AfMBiwGKAbQC9AIUAfQBFAH0AQAL/wEAAv8DAAL0AfABbQQUAW0B8AL0AwAB/wH0AZkBUgP0AVIBmQH0
+        Af8FAAH0AbsGigG7BPQBFAH0DQAC/wMAAfQBkgMUAuwDFAGSAfQDAAL0AVIBmQH0AUwB9AGZAVIC9AYA
+        A/QB8wGLAYoBtAG8BRQB9AQAC/8DAAH0AZICFAETAvMBEwIUAZIB9AQABPQBTAT0CAAB/wHzAYsBigG0
+        CPQEAAv/AwAB/wH0AfABbQGSAvQBkgFtAfAB9AH/BQAB9AH/A/QB/wH0CAAB/wX0Af8bAAP0Av8D9AQA
+        AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAL/AYACAAEHAcABAwH4AQEBgAIA
+        AQcBwAEDAfgBAQGAAgABBwHAAQMB+AEBAYADAAHAAQMB+AEBBAABwAEDAeABAQQAAcABAwHAAQEEAAHA
+        AQMBgAEBBAABwAEDAYABAQQAAcABAwGAAQEBgAMAAcABAwGAAQMEAAHAAQMBgAEHAYADAAHAAQMBgAEP
+        AYADAAHAAQMBgAEPAcABAAHgAQABwAEDAcABHwHgAQAB4AEAAcABAwHgAT8BwAF/AeABAAHwAQ8L
+</value>
+  </data>
   <metadata name="openWorkflowDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
