Updated start screen menu icons to rescale across different DPI ranges.

--- a/Bonsai.Editor/StartScreen.resx
+++ b/Bonsai.Editor/StartScreen.resx
@@ -117,64 +117,52 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="iconList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="iconList.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>184, 17</value>
-  </metadata>
-  <data name="iconList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  </data>
+  <data name="openWorkflowDialog.TrayLocation" type="System.Drawing.Point, System.Drawing">
+    <value>17, 17</value>
+  </data>
+  <data name="galleryToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
-        CgAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AFgAB/w70
-        EgAM9AcACvQCAAH0AQcMFAH0EgAB9AoUAfQHAAH0CBQB9AIAAfQB7AoUAfcBFAH0EgAB9AoUAfQHAAH0
-        ARQG9AEUAfQCAAH0AeoKFAHxARQB9AEAAf8B8AHrARMCIQEAAQ4BEQEVAf8GAAH0AhQC9AIUAvQCFAH0
-        BwAB9AEUBvQBFAH0AQAB/wHwChQB6gH0ARQB9AEABP8B8AETAesE/wEAAv8DAAH0AhQC9AIUAvQCFAH0
-        BQAB9AH/AfQBFAb0ARQB9AEAAfQB9woUAewB9AEUAfQBAAH/Ae8BcgH3ARwB6gHxBP8BAAL/AwAB9AoU
-        AfQEAAT0ARQG9AEUAfQBAAH0AW0KFAEHAfQBFAH0AQAB/wFJAScBIQESAW0BkgFyAe0B8wH/AQAC/wMA
-        AfQKFAH0AwAC9AFSAZkB9AEUBvQBFAH0AQAB9AEUAW0BBwHyAfQGFAL0ARQB9AEAAf8B9AFJAgIEJwES
-        Af8BAAL/AwAB9AIUAvQCFAL0AhQB9AMAAf8B9AGZAVIB9AEUBPQCFAHsAfQBAAL0AbsCign0ARQB9AEA
-        Af8B9AFzAUkCLQICAScBSQH/AQAC/wMAAfQCFAL0AhQC9AIUAfQDAAX0ARQE9AEUAewB9AH/AgAB9AGK
-        AbQB8gn0ARQB9AEAAf8B9wMtAQIB7QH3AbwC/wEAAv8DAAH0ChQB9AMAAfQCTAL0BRQB7AH0Af8CAAL0
-        AYoB8gHzAYsBigG0BvQBFAH0AQAC/wGYAU8BAgFyBf8BAAL/AwAB9AoUAfQDAAv0Af8EAAH0AYoBtAHy
-        AfMBiwGKAbQC9AIUAfQBFAH0AQAL/wEAAv8DAAL0AfABbQQUAW0B8AL0AwAB/wH0AZkBUgP0AVIBmQH0
-        Af8FAAH0AbsGigG7BPQBFAH0DQAC/wMAAfQBkgMUAuwDFAGSAfQDAAL0AVIBmQH0AUwB9AGZAVIC9AYA
-        A/QB8wGLAYoBtAG8BRQB9AQAC/8DAAH0AZICFAETAvMBEwIUAZIB9AQABPQBTAT0CAAB/wHzAYsBigG0
-        CPQEAAv/AwAB/wH0AfABbQGSAvQBkgFtAfAB9AH/BQAB9AH/A/QB/wH0CAAB/wX0Af8bAAP0Av8D9AQA
-        AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAL/AYACAAEHAcABAwH4AQEBgAIA
-        AQcBwAEDAfgBAQGAAgABBwHAAQMB+AEBAYADAAHAAQMB+AEBBAABwAEDAeABAQQAAcABAwHAAQEEAAHA
-        AQMBgAEBBAABwAEDAYABAQQAAcABAwGAAQEBgAMAAcABAwGAAQMEAAHAAQMBgAEHAYADAAHAAQMBgAEP
-        AYADAAHAAQMBgAEPAcABAAHgAQABwAEDAcABHwHgAQAB4AEAAcABAwHgAT8BwAF/AeABAAHwAQ8L
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        LgAAAC4B3MR7zgAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4xMzQDW3oAAAFJSURBVDhPY0AD
+        /8nAKOA/KQCkHqINAaBSxAGQerAmUjEMQPmk2woDGAZ0b+j4bzhT/z9PL9f/4iWFUFFUgNOAOdtn/2dY
+        ARRYw/CfcQ7jf5Yq5v+da9r/z9849//x08fAakAApwHvP7z/37S2/r9igOx/hhlAiYlA3AnETQz/mTKY
+        /tukmoPV4TTg0+dP/+3SbP4ztAMFKxn+80dz/eeIY//PkAXkJzP898nzBKvDaYB6jMp/pmim/5zeHP8j
+        4vz/5yRG/5+2dMr/pM6k//0Le/+/ffcWrA6nAUs3L/6fMzX7/9wVs/+vXDT3f05M8P/7d2+D5ZABTgOQ
+        wc2b1/9H+9j9ry3NgYogAE4Drly7/D+/Ou+/Z6jrfy5F9v+Mkoz/mQQZ/3MLsP3X1FD+b21pBlYH1YSM
+        MQSIwSgAmwJCGAVgU0AIQwEDAwDQOSKjzVPunwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="openWorkflowDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="newToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAMRJREFUOE/NkjsOAiEYhDmCtSew9AycyAtYyjVsPImJhRWHsLESjUCLDv4T2V1Y
+        X42TTDbAzLf/PlSpEMLCOTeJMSYaa+xLpK17aC0li+t2OSUkr3Eu0aFwB4R2q1k67De5SADW2BdIfRIZ
+        2zJ8PR1zAdcCapGTSlcI0yw37Lz3c6k9hUOMXDx30loPbIypQ1iCOQEKZ3fpuAnpv4MxQAmRev0r1AA0
+        zpCR+kP9/+BjAIRJ+Cd+BaD+BzDml4B3LPFfpNQN8wIwvWiZlr0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="openToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAARxJREFUOE+VkrGqwjAUhvsG9z6J3Ee49BVcWlBw6F7wCZw6qrMIF1TodB9Ah+6d
+        XAqiLsVBB4X0atqO5+aENiRNoxj4SM/J//9Nm1j1oJR+FUVBGCBBsF9JXg8Uny8Z6Qx/werOoTeNeEiF
+        HCyorJbFikndvNwykEPiOAbbtjVEAJpn6wQ++gtuaoJr9/sDMvInaAZwM75td7pqO6APKkyIElCW5Td/
+        YOJn5iZPd4A1YjIjIqAWy/8A6zaTjBKAhed5EEURpGnKF7DXRlvA1vd9TWhis96oAXmej8Iw1IQmxuOJ
+        GoC3L0kSTWjCcRw1oDoF4rquJjZx2B/5LALYZ/wEQaAJTayWKz6LAHaZBngCTeErRAAh5BOL9yngH20J
+        kTZzqhGFAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="packageManagerToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAJ1JREFUOE+1j7ENxCAMRTPCjXCz0LMFg6SivQXY5ZZgCwouDa3j78MKikBRFIH0
+        JGP7P8kLEQn6SikrQ0xmXhXU6K117chpwcM3840xknOOQggIfABq9DDDDnZ7goxFY4xgraWUkoBa+1Wc
+        ewIZ6iLw3gttrwo40hEAPaENgeaEseAcGjFf8MubMPrPF1wxX/D4hMeCK+YJ7vDP0bIDFVes7Wn8RVwA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
