--- a/Bonsai.Editor/Properties/Resources.resx
+++ b/Bonsai.Editor/Properties/Resources.resx
@@ -239,7 +239,7 @@ Do you want to install Visual Studio Code?</value>
     <value>Install Script Editor</value>
   </data>
   <data name="CreateExtensionsWorkflow_Warning" xml:space="preserve">
-    <value>The workflow must be saved before adding or saving extensions.</value>
+    <value>The workflow must be saved before adding new extensions.</value>
   </data>
   <data name="CreateExtensionsWorkflow_Warning_Caption" xml:space="preserve">
     <value>Save Workflow</value>
