Added tool strip menu item for switching between light and dark themes.

--- a/Bonsai.Editor/MainForm.resx
+++ b/Bonsai.Editor/MainForm.resx
@@ -341,6 +341,18 @@
         aOjyK1i3CKfQFkWxtygATHpPHswSHCZulirUsqyH0rsw5h/GwnbQ7xsxswAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="themeToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAABl0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC4yMfEgaZUAAAE6SURBVDhPnVMh
+        joRAEOQp9xYEGolAkFtegULheQP+NrwAg0EhwJAgEHdnuQsBguqdmp0mM7DkkuukBN1VNT09jXWMdV2D
+        eZ6LZVlIB3KoKdo5RPFNEOuqqiiKIrJt2wByqIEDrpI9Q4nHJElOQobruuR5HqVpCpPRMIErCkdRGIYS
+        /J1lGd3eb2xSSzHuhdZ0IaNtW+q6bv+O45h+xl/ZCTTQWhjOqzsDIPq+v3+jAxjcP+5yJtCifUN0Bcxg
+        2zZp8PX5LXPQ/mngOI7sYhgGKWagdmmA0/I8p2maDJGOSwOc2Pf9SxHDuMJxiGiXiU3TSOhiwBji8Rn5
+        qQDO6WKcbjwjQrRS8xYGQbCTy7KkoigM8WmREFhLkRh5GzFEFrEQbV+uMkKZ/O9n0gP3wnAEUU6ZgRxq
+        iqbCsh4tKngZQqIKKQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="docsToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
