--- a/Bonsai.Core/Properties/Resources.resx
+++ b/Bonsai.Core/Properties/Resources.resx
@@ -129,6 +129,9 @@
   <data name="Exception_InvalidTypeNamespace" xml:space="preserve">
     <value>Unable to resolve the XML type '{0}' without a valid clr-namespace.</value>
   </data>
+  <data name="Exception_PendingPropertyAssignment" xml:space="preserve">
+    <value>Pending property assignments have been found on some of the missing included workflows. Please restore the missing files and reload the workflow.</value>
+  </data>
   <data name="Exception_PropertyNotFound" xml:space="preserve">
     <value>The specified property '{0}' was not found in the workflow. </value>
   </data>
@@ -136,7 +139,7 @@
     <value>The workflow contains non-public types. Please ensure any internal operators have been fully converted or removed before saving the workflow.</value>
   </data>
   <data name="Exception_SerializingUnknownTypeBuilder" xml:space="preserve">
-    <value>The workflow contains unspecified types. Please install any missing packages or replace the affected modules and try again.</value>
+    <value>The workflow contains unspecified types. Please install any missing packages or replace the affected modules before saving the workflow.</value>
   </data>
   <data name="Exception_TypeLoadException" xml:space="preserve">
     <value>Failed to load type '{0}'.</value>
